--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,6 @@
     <title>hydra-auction-demo</title>
   </head>
   <body>
-    <script type="module" src="./dist/index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
