refactor(api)!: pass contract configuration

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,5 +6,26 @@
   </head>
   <body>
     <script type="module" src="index.js"></script>
+    <div id="mainButtons" style="margin-top: 20px">
+      <button id="startBidding" style="background: #ddd; border: none; border-radius: 4px; padding: 4px 8px 4px 8px">
+        StartBidding
+      </button>
+      <hr style="display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0" />
+      <button id="moveBidL2" style="background: #ddd; border: none; border-radius: 4px; padding: 4px 8px 4px 8px">
+        MoveBidL2
+      </button>
+      <hr style="display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0" />
+      <button id="placeBidL2" style="background: #ddd; border: none; border-radius: 4px; padding: 4px 8px 4px 8px">
+        PlaceBidL2
+      </button>
+      <div style="margin-top: 10px">
+        Bid:
+          <input type="text" style="width: 300px" id="bidLovelace" name="bidLovelace"/>
+      </div>
+      <hr style="display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0" />
+      <button id="claimAuctionLot" style="background: #ddd; border: none; border-radius: 4px; padding: 4px 8px 4px 8px">
+        ClaimAuctionLot
+      </button>
+    </div>
   </body>
 </html>
